--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"format": "prettier --write \"browsertest/{setup,runTests}.js\" \"{cypress/integration,src,test}/**/*.js\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
-		"test": "nyc mocha test --recursive",
+		"test": "NODE_ENV=test nyc mocha test",
 		"test:watch": "npm test -- --watch",
 		"test:watch:min": "npm run test:watch -- --reporter=min",
 		"test:node": "npm run build:check && BABEL_ENV=buildcheck mocha test --recursive",
