--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
 		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
 		"prebuild:browsertest": "cp package.json browsertest/",
 		"build": "npm run build:node && npm run build:browser",
-		"build:browsertest": "npm run prebuild:browsertest && npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest && npm run clean:browsertest",
+		"build:browsertest":
+			"npm run prebuild:browsertest && npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest && npm run clean:browsertest",
 		"build:node": "npm run prebuild:node && npm run babel",
 		"build:browser": "npm run browserify && npm run uglify",
 		"build:check": "node -e \"require('./dist-node')\"",
 		"babel": "babel src -d dist-node",
-		"babel:browsertest": "babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
+		"babel:browsertest":
+			"babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
 		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-js.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
 		"uglify": "uglifyjs -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
@@ -75,8 +77,6 @@
 		"babel-plugin-transform-runtime": "=6.23.0",
 		"babel-preset-env": "=1.6.0",
 		"browserify": "=16.0.0",
-		"chai": "=4.1.2",
-		"chai-as-promised": "=7.1.1",
 		"coveralls": "=3.0.0",
 		"cypress": "=2.0.2",
 		"eslint": "=4.16.0",
@@ -91,8 +91,9 @@
 		"nyc": "=11.3.0",
 		"prettier": "=1.8.2",
 		"rewireify": "=0.2.5",
+		"should": "=11.2.1",
+		"should-sinon": "=0.0.6",
 		"sinon": "=4.1.2",
-		"sinon-chai": "=2.14.0",
 		"uglify-js": "=3.3.10"
 	}
 }
