--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 	"license": "GPL-3.0",
 	"keywords": [
 		"lisk",
-		"blockchain"
+		"blockchain",
+		"nodejs",
+		"javascript",
+		"library"
 	],
 	"homepage": "https://github.com/LiskHQ/lisk-js#readme",
 	"repository": {
@@ -25,7 +28,6 @@
 		"prestart": "./bin/prestart.sh",
 		"start": "./bin/start.sh",
 		"clean": "rm -rf ./node_modules ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js ./dist-node",
-		"clean:browsertest": "rm -r browsertest/src browsertest/test",
 		"format": "prettier --write \"browsertest/{setup,runTests}.js\" \"{cypress/integration,src,test}/**/*.js\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
@@ -40,16 +42,19 @@
 		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
 		"serve:browsertest": "http-server browsertest",
 		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
+		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js",
 		"prebuild:browsertest": "cp package.json browsertest/",
-		"build": "npm run build:node && npm run build:browser",
+		"prebuild": "npm run prebuild:node && npm run prebuild:browser",
+		"build": "npm run babel && npm run browserify && npm run uglify",
 		"build:browsertest":
-			"npm run prebuild:browsertest && npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest && npm run clean:browsertest",
-		"build:node": "npm run prebuild:node && npm run babel",
-		"build:browser": "npm run browserify && npm run uglify",
+			"npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest",
+		"build:node": "npm run babel",
+		"build:browser": "npm run babel && npm run browserify && npm run uglify",
 		"build:check": "node -e \"require('./dist-node')\"",
 		"babel": "babel src -d dist-node",
 		"babel:browsertest":
 			"babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
+		"postbuild:browsertest": "rm -r browsertest/src browsertest/test",
 		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-js.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
 		"uglify": "uglifyjs -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
