--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"bitcore-mnemonic": "=1.2.5",
 		"browserify-bignum": "=1.3.0-2",
 		"chai": "=4.0.2",
+		"chai-as-promised": "=7.1.1",
 		"chai-bignumber": "=2.0.0",
 		"co-mocha": "=1.2.1",
 		"coveralls": "=2.13.1",
