:recycle: cleaned package script order and ignore comment

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,6 @@ browsertest/package.json
 browsertest/browsertest.js
 browsertest/browsertest.min.js
 
-# lock files (required version is npm below 3)
+# lock files (supported package manager is npm 3)
 package-lock.json
 yarn.lock
