--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
 		"babel": "babel src -d dist-node",
-		"babel:browsertest":
-			"babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
+		"babel:browsertest": "babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
 		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-js.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
 		"uglify": "uglifyjs -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
@@ -49,12 +48,11 @@
 		"cover:local": "npm run cover:base -- --reporter=html --reporter=text",
 		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
 		"prebuild:browsertest": "cp package.json browsertest/",
-		"build:browsertest":
-			"npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest",
+		"build:browsertest": "npm run babel:browsertest && npm run browserify:browsertest && npm run uglify:browsertest",
 		"postbuild:browsertest": "rm -r browsertest/src browsertest/test",
 		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
 		"build:node": "npm run babel",
-		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js",
+		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js  | echo",
 		"build:browser": "npm run babel && npm run browserify && npm run uglify",
 		"prebuild": "npm run prebuild:node && npm run prebuild:browser",
 		"build": "npm run babel && npm run browserify && npm run uglify",
