--- a/package.json
+++ b/package.json
@@ -2,6 +2,22 @@
 	"name": "lisky",
 	"version": "0.3.0",
 	"description": "A command line interface for Lisk",
+	"author":
+		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
+	"license": "GPL-3.0",
+	"keywords": ["lisk", "blockchain", "command-line", "nodejs", "javascript"],
+	"homepage": "https://github.com/LiskHQ/lisky#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LiskHQ/lisky.git"
+	},
+	"bugs": {
+		"url": "https://github.com/LiskHQ/lisky/issues"
+	},
+	"engines": {
+		"node": "=6.12.3",
+		"npm": "=3.10.10"
+	},
 	"main": "./dist/index.js",
 	"engines": {
 		"node": "=6.12.3",
@@ -37,18 +53,6 @@
 		"prepush": "npm run lint && npm test",
 		"prepublishOnly": "npm run build"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LiskHQ/lisky.git"
-	},
-	"keywords": ["lisk", "blockchain", "command-line", "nodejs", "javascript"],
-	"author":
-		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/LiskHQ/lisky/issues"
-	},
-	"homepage": "https://github.com/LiskHQ/lisky#readme",
 	"devDependencies": {
 		"babel-cli": "=6.26.0",
 		"babel-plugin-istanbul": "=4.1.5",
@@ -59,6 +63,7 @@
 		"eslint-config-airbnb-base": "=12.1.0",
 		"eslint-config-lisk-base": "=0.1.0",
 		"eslint-plugin-import": "=2.8.0",
+		"eslint-plugin-mocha": "=4.11.0",
 		"husky": "=0.14.3",
 		"lint-staged": "=5.0.0",
 		"mocha": "=4.0.1",
