--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"postbuild:browsertest": "rm -r browsertest/src browsertest/test",
 		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
 		"build:node": "npm run babel",
-		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js  | echo",
+		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js | echo",
 		"build:browser": "npm run babel && npm run browserify && npm run uglify",
 		"prebuild": "npm run prebuild:node && npm run prebuild:browser",
 		"build": "npm run babel && npm run browserify && npm run uglify",
@@ -82,11 +82,11 @@
 		"babel-plugin-transform-runtime": "=6.23.0",
 		"babel-preset-env": "=1.6.0",
 		"browserify": "=16.0.0",
+		"chai": "=4.1.2",
+		"chai-as-promised": "=7.1.1",
 		"coveralls": "=3.0.0",
 		"cypress": "=2.0.2",
 		"eslint": "=4.16.0",
-		"chai": "=4.1.2",
-		"chai-as-promised": "=7.1.1",
 		"eslint-config-airbnb-base": "=11.3.1",
 		"eslint-config-lisk-base": "=0.1.0",
 		"eslint-plugin-import": "=2.7.0",
@@ -99,8 +99,7 @@
 		"prettier": "=1.8.2",
 		"rewireify": "=0.2.5",
 		"sinon": "=4.1.2",
-		"uglify-js": "=3.3.10"
 		"sinon-chai": "=2.14.0",
-		"sinon": "=2.2.0"
+		"uglify-es": "=3.3.9"
 	}
 }
