:bug: Fix build bugs for browser

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"babel:browsertest": "babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
 		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-js.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
-		"uglify": "uglifyjs -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
+		"uglify": "uglifyjs -nm -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
 		"uglify:browsertest": "uglifyjs -o ./browsertest/browsertest.min.js ./browsertest/browsertest.js",
 		"serve:browsertest": "http-server browsertest",
 		"test": "NODE_ENV=test nyc mocha test",
@@ -79,7 +79,7 @@
 		"babel-plugin-rewire": "=1.1.0",
 		"babel-plugin-transform-runtime": "=6.23.0",
 		"babel-preset-env": "=1.6.0",
-		"browserify": "=16.0.0",
+		"browserify": "=13.3.0",
 		"coveralls": "=3.0.0",
 		"cypress": "=2.0.2",
 		"eslint": "=4.16.0",
