:fire: remove cypress plugin folder and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ test/.coverage-unit
 # cypress media
 cypress/screenshots
 cypress/videos
+cypress/plugins
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
