:nail_care: Update eslint settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,4 @@
 {
 	"extends": ["lisk-base"],
-	"rules": {
-		"arrow-parens": "off",
-		"curly": "off",
-		"function-paren-newline": "off",
-		"indent": "off",
-		"no-confusing-arrow": "off",
-		"object-curly-newline": "off"
-	}
+	"plugins": ["mocha"]
 }
