--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"scripts": {
 		"prestart": "./bin/prestart.sh",
 		"start": "./bin/start.sh",
-		"format": "prettier --write \"browsertest/{setup,runTests}.js\" \"{cypress/integration,src,test}/**/*.js\"",
+		"format": "prettier --write \"browsertest/{setup,run_tests}.js\" \"{cypress/integration,src,test}/**/*.js\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
 		"babel": "babel src -d dist-node",
