rename param on to active for sync and broadcast

--- a/config.json
+++ b/config.json
@@ -97,7 +97,7 @@
 		}
 	},
 	"broadcasts": {
-		"on": true,
+		"active": true,
 		"broadcastInterval": 5000,
 		"broadcastLimit": 20,
 		"parallelLimit": 20,
@@ -115,7 +115,7 @@
 		}
 	},
 	"syncing": {
-		"on": true
+		"active": true
 	},
 	"loading": {
 		"verifyOnLoading": false,
