:fire: Remove redundant API keys from default config

--- a/default_config.json
+++ b/default_config.json
@@ -3,9 +3,7 @@
 	"json": false,
 	"api": {
 		"testnet": false,
-		"node": "",
-		"port": "",
-		"ssl": true
+		"node": ""
 	},
 	"pretty": false
 }
