:seedling: Add set network command and remove testnet options

--- a/default_config.json
+++ b/default_config.json
@@ -2,8 +2,8 @@
 	"name": "lisky",
 	"json": false,
 	"api": {
-		"testnet": false,
-		"node": ""
+		"node": "",
+		"network": ""
 	},
 	"pretty": false
 }
