--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
 		"jsdoc": "=3.4.3",
 		"jsdox": "=0.4.10",
 		"lint-staged": "=6.1.0",
-		"lisk-js": "LiskHQ/lisk-js#lisk-elements-1.0.0-RC2",
+		"lisk-js": "beta",
 		"mocha": "=4.0.1",
 		"moment": "=2.18.1",
 		"node-mocks-http": "^1.6.6",
