--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
 		"babel-polyfill": "=6.26.0",
 		"bip39": "=2.4.0",
 		"chalk": "=2.3.0",
-		"cli-table2": "=0.2.0",
+		"cli-table2":
+			"jamestalmage/cli-table2#187c6ae80b9d963c598d0cb3379153387bfb15c4",
 		"lisk-js": "beta",
 		"lockfile": "=1.0.3",
 		"semver": "=5.5.0",
