--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"docs:serve": "./node_modules/.bin/http-server docs/jsdoc/",
 		"precommit": "lint-staged",
 		"check:dependencies": "./node_modules/.bin/snyk protect",
-		"prepush": "npm run lint && npm run check:dependencies",
+		"prepush":
+			"./node_modules/.bin/eslint $(git ls-files '*.js') && npm run check:dependencies",
 		"prepublishOnly": "npm run check:dependencies"
 	},
 	"dependencies": {
