--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"babel-plugin-rewire": "=1.1.0",
 		"babel-plugin-transform-runtime": "=6.23.0",
 		"babel-preset-env": "=1.6.0",
+		"babel-register": "=6.26.0",
 		"browserify": "=16.0.0",
 		"chai": "=4.1.2",
 		"chai-as-promised": "=7.1.1",
