--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
 		"jsdoc": "=3.4.3",
 		"jsdox": "=0.4.10",
 		"lint-staged": "=6.1.0",
-		"lisk-js": "beta",
+		"lisk-js": "1.0.0-beta.2",
 		"mocha": "=4.0.1",
 		"moment": "=2.18.1",
 		"node-mocks-http": "^1.6.6",
