--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lisk-js",
+	"name": "lisk-elements",
 	"version": "0.4.5",
 	"description": "JavaScript library for sending Lisk transactions from the client or server",
 	"author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
@@ -11,13 +11,13 @@
 		"javascript",
 		"library"
 	],
-	"homepage": "https://github.com/LiskHQ/lisk-js#readme",
+	"homepage": "https://github.com/LiskHQ/lisk-elements#readme",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/LiskHQ/lisk-js.git"
+		"url": "git+https://github.com/LiskHQ/lisk-elements.git"
 	},
 	"bugs": {
-		"url": "https://github.com/LiskHQ/lisk-js/issues"
+		"url": "https://github.com/LiskHQ/lisk-elements/issues"
 	},
 	"engines": {
 		"node": ">=6.3 <=9.5",
@@ -32,9 +32,9 @@
 		"lint:fix": "npm run lint -- --fix",
 		"babel": "babel src -d dist-node",
 		"babel:browsertest": "babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
-		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-js.js -s lisk -t rewireify",
+		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-elements.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
-		"uglify": "uglifyjs -nm -o ./dist-browser/lisk-js.min.js ./dist-browser/lisk-js.js",
+		"uglify": "uglifyjs -nm -o ./dist-browser/lisk-elements.min.js ./dist-browser/lisk-elements.js",
 		"uglify:browsertest": "uglifyjs -o ./browsertest/browsertest.min.js ./browsertest/browsertest.js",
 		"serve:browsertest": "http-server browsertest",
 		"test": "NODE_ENV=test nyc mocha test",
@@ -52,7 +52,7 @@
 		"postbuild:browsertest": "rm -r browsertest/src browsertest/test",
 		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
 		"build:node": "npm run babel",
-		"prebuild:browser": "rm ./dist-browser/lisk-js.js ./dist-browser/lisk-js.min.js | echo",
+		"prebuild:browser": "rm ./dist-browser/lisk-elements.js ./dist-browser/lisk-elements.min.js | echo",
 		"build:browser": "npm run babel && npm run browserify && npm run uglify",
 		"prebuild": "npm run prebuild:node && npm run prebuild:browser",
 		"build": "npm run babel && npm run browserify && npm run uglify",
