:recycle: Move src directory to packages

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
 	"scripts": {
 		"prestart": "./bin/prestart.sh",
 		"start": "./bin/start.sh",
-		"format": "prettier --write \"browsertest/{setup,run_tests}.js\" \"{cypress/integration,src,test}/**/*.js\"",
+		"format": "prettier --write \"browsertest/{setup,run_tests}.js\" \"{cypress/integration,packages,test}/**/*.js\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
-		"babel": "babel src -d dist-node",
-		"babel:browsertest": "babel src -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
+		"babel": "babel packages -d dist-node",
+		"babel:browsertest": "babel packages -d ./browsertest/src && BABEL_ENV=browsertest babel test --ignore test/transactions/dapp.js -d ./browsertest/test",
 		"browserify": "browserify ./dist-node/index.js -o ./dist-browser/lisk-elements.js -s lisk -t rewireify",
 		"browserify:browsertest": "browserify ./browsertest/test/*.js ./browsertest/test/**/*.js -o ./browsertest/browsertest.js -s lisk -t rewireify",
 		"uglify": "uglifyjs -nm -o ./dist-browser/lisk-elements.min.js ./dist-browser/lisk-elements.js",
