Add cors configuration options into application config file

--- a/config.json
+++ b/config.json
@@ -43,6 +43,10 @@
 				"delayAfter": 0,
 				"windowMs": 60000
 			}
+		},
+		"cors": {
+			"origin": "*",
+			"headers": ["GET", "POST", "PUT"]
 		}
 	},
 	"peers": {
