--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lisk-elements",
+	"name": "lisk-elements-monorepo",
 	"version": "1.0.0-rc.0",
 	"description": "JavaScript library for sending Lisk transactions from the client or server",
 	"author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
