--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -1,3 +1,20 @@
 {
-	"name": "lisk-constants"
+	"name": "lisk-constants",
+	"scripts": {
+		"test": "NODE_ENV=test nyc mocha test",
+		"test:watch": "npm test -- --watch",
+		"test:watch:min": "npm run test:watch -- --reporter=min"
+	},
+	"devDependencies": {
+		"babel-plugin-istanbul": "4.1.6",
+		"babel-plugin-transform-runtime": "6.23.0",
+		"babel-preset-env": "1.6.1",
+		"babel-register": "^6.26.0",
+		"chai": "4.1.2",
+		"chai-as-promised": "7.1.1",
+		"mocha": "5.1.1",
+		"nyc": "11.7.1",
+		"sinon": "5.0.3",
+		"sinon-chai": "3.0.0"
+	}
 }
