--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "lisk-constants",
 	"scripts": {
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
+		"lint": "eslint .",
+		"lint:fix": "npm run lint -- --fix",
 		"test": "NODE_ENV=test nyc mocha test",
 		"test:watch": "npm test -- --watch",
 		"test:watch:min": "npm run test:watch -- --reporter=min"
@@ -12,8 +15,14 @@
 		"babel-register": "^6.26.0",
 		"chai": "4.1.2",
 		"chai-as-promised": "7.1.1",
+		"eslint": "4.19.1",
+		"eslint-config-airbnb-base": "12.1.0",
+		"eslint-config-lisk-base": "1.0.0",
+		"eslint-plugin-import": "2.11.0",
+		"eslint-plugin-mocha": "5.0.0",
 		"mocha": "5.1.1",
 		"nyc": "11.7.1",
+		"prettier": "1.12.1",
 		"sinon": "5.0.3",
 		"sinon-chai": "3.0.0"
 	}
