--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -1,14 +1,19 @@
 {
 	"name": "lisk-constants",
+	"main": "dist/index.js",
 	"scripts": {
 		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
 		"test": "NODE_ENV=test nyc mocha test",
 		"test:watch": "npm test -- --watch",
-		"test:watch:min": "npm run test:watch -- --reporter=min"
+		"test:watch:min": "npm run test:watch -- --reporter=min",
+		"prebuild": "rm -r dist || mkdir dist | echo",
+		"build": "babel src -d dist",
+		"build:check": "node -e \"require('./dist')\""
 	},
 	"devDependencies": {
+		"babel-cli": "6.26.0",
 		"babel-plugin-istanbul": "4.1.6",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "1.6.1",
