--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -19,7 +19,6 @@
 		"babel-preset-env": "1.6.1",
 		"babel-register": "^6.26.0",
 		"chai": "4.1.2",
-		"chai-as-promised": "7.1.1",
 		"eslint": "4.19.1",
 		"eslint-config-airbnb-base": "12.1.0",
 		"eslint-config-lisk-base": "1.0.0",
@@ -27,8 +26,6 @@
 		"eslint-plugin-mocha": "5.0.0",
 		"mocha": "5.1.1",
 		"nyc": "11.7.1",
-		"prettier": "1.12.1",
-		"sinon": "5.0.3",
-		"sinon-chai": "3.0.0"
+		"prettier": "1.12.1"
 	}
 }
