--- a/packages/lisk-passphrase/package.json
+++ b/packages/lisk-passphrase/package.json
@@ -1,3 +1,23 @@
 {
-	"name": "lisk-passphrase"
+	"name": "lisk-passphrase",
+	"version": "1.0.0",
+	"description": "Mnemonic passphrase helpers for use with Lisk-related software",
+	"author":
+		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
+	"license": "GPL-3.0",
+	"keywords": ["lisk", "blockchain"],
+	"homepage":
+		"https://github.com/LiskHQ/lisk-elements/tree/master/packages/lisk-passphrase#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LiskHQ/lisk-elements.git"
+	},
+	"bugs": {
+		"url": "https://github.com/LiskHQ/lisk-elements/issues"
+	},
+	"engines": {
+		"node": "6.14.1",
+		"npm": "3.10.10"
+	},
+	"main": "dist/index.js"
 }
