--- a/packages/lisk-passphrase/package.json
+++ b/packages/lisk-passphrase/package.json
@@ -22,9 +22,19 @@
 	},
 	"main": "dist/index.js",
 	"scripts": {
-		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\""
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
+		"lint": "eslint .",
+		"lint:fix": "npm run lint -- --fix"
+	},
+	"dependencies": {
+		"bip39": "=2.4.0"
 	},
 	"devDependencies": {
+		"eslint": "4.19.1",
+		"eslint-config-airbnb-base": "12.1.0",
+		"eslint-config-lisk-base": "1.0.0",
+		"eslint-plugin-import": "2.11.0",
+		"eslint-plugin-mocha": "5.0.0",
 		"prettier": "1.12.1"
 	}
 }
