--- a/packages/lisk-passphrase/package.json
+++ b/packages/lisk-passphrase/package.json
@@ -32,12 +32,16 @@
 			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
 		"cover:local": "npm run cover:base -- --reporter=html --reporter=text",
-		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v"
+		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
+		"prebuild": "rm -r dist || mkdir dist | echo",
+		"build": "babel src -d dist",
+		"build:check": "node -e \"require('./dist')\""
 	},
 	"dependencies": {
 		"bip39": "=2.4.0"
 	},
 	"devDependencies": {
+		"babel-cli": "6.26.0",
 		"babel-plugin-istanbul": "=4.1.4",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "=1.6.0",
