--- a/packages/lisk-constants/package.json
+++ b/packages/lisk-constants/package.json
@@ -41,7 +41,7 @@
 		"babel-plugin-istanbul": "4.1.6",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "1.6.1",
-		"babel-register": "^6.26.0",
+		"babel-register": "6.26.0",
 		"chai": "4.1.2",
 		"eslint": "4.19.1",
 		"eslint-config-airbnb-base": "12.1.0",
