--- a/packages/lisk-cryptography/package.json
+++ b/packages/lisk-cryptography/package.json
@@ -26,8 +26,8 @@
 		"lint:fix": "npm run lint -- --fix"
 	},
 	"dependencies": {
-		"browserify-bignum": "=1.3.0-2",
-		"ed2curve": "=0.2.1"
+		"browserify-bignum": "1.3.0-2",
+		"ed2curve": "0.2.1"
 	},
 	"devDependencies": {
 		"eslint": "4.19.1",
