--- a/packages/lisk-cryptography/package.json
+++ b/packages/lisk-cryptography/package.json
@@ -20,6 +20,7 @@
 		"node": "6.14.1",
 		"npm": "3.10.10"
 	},
+	"main": "dist/index.js",
 	"scripts": {
 		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
 		"lint": "eslint .",
@@ -31,7 +32,10 @@
 			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
 		"cover:local": "npm run cover:base -- --reporter=html --reporter=text",
-		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v"
+		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
+		"prebuild": "rm -r dist || mkdir dist | echo",
+		"build": "babel src -d dist",
+		"build:check": "node -e \"require('./dist')\""
 	},
 	"dependencies": {
 		"browserify-bignum": "1.3.0-2",
@@ -39,6 +43,7 @@
 		"js-nacl": "LiskHQ/js-nacl#6dc1417"
 	},
 	"devDependencies": {
+		"babel-cli": "6.26.0",
 		"babel-plugin-istanbul": "4.1.6",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "1.6.1",
