--- a/packages/lisk-transactions/package.json
+++ b/packages/lisk-transactions/package.json
@@ -1,3 +1,23 @@
 {
-	"name": "lisk-transactions"
+	"name": "lisk-transactions",
+	"version": "1.0.0",
+	"description":
+		"Everything related to transactions according to the Lisk protocol",
+	"author":
+		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
+	"license": "GPL-3.0",
+	"keywords": ["lisk", "blockchain"],
+	"homepage":
+		"https://github.com/LiskHQ/lisk-elements/tree/master/packages/lisk-transactions#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LiskHQ/lisk-elements.git"
+	},
+	"bugs": {
+		"url": "https://github.com/LiskHQ/lisk-elements/issues"
+	},
+	"engines": {
+		"node": "6.14.1",
+		"npm": "3.10.10"
+	}
 }
