--- a/packages/lisk-transactions/package.json
+++ b/packages/lisk-transactions/package.json
@@ -21,9 +21,21 @@
 		"npm": "3.10.10"
 	},
 	"scripts": {
-		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\""
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
+		"lint": "eslint .",
+		"lint:fix": "npm run lint -- --fix"
+	},
+	"dependencies": {
+		"browserify-bignum": "1.3.0-2",
+		"lisk-constants": "1.0.0",
+		"lisk-cryptography": "1.0.0"
 	},
 	"devDependencies": {
+		"eslint": "4.19.1",
+		"eslint-config-airbnb-base": "12.1.0",
+		"eslint-config-lisk-base": "1.0.0",
+		"eslint-plugin-import": "2.11.0",
+		"eslint-plugin-mocha": "5.0.0",
 		"prettier": "1.12.1"
 	}
 }
