--- a/config.json
+++ b/config.json
@@ -97,7 +97,8 @@
 			"blackList": []
 		},
 		"options": {
-			"timeout": 5000
+			"timeout": 5000,
+			"broadhashConsensusCalculationInterval": 5000
 		}
 	},
 	"broadcasts": {
