--- a/packages/lisk-transactions/package.json
+++ b/packages/lisk-transactions/package.json
@@ -23,19 +23,37 @@
 	"scripts": {
 		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
 		"lint": "eslint .",
-		"lint:fix": "npm run lint -- --fix"
+		"lint:fix": "npm run lint -- --fix",
+		"test": "NODE_ENV=test nyc mocha test",
+		"test:watch": "npm test -- --watch",
+		"test:watch:min": "npm run test:watch -- --reporter=min",
+		"cover":
+			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
+		"cover:base": "NODE_ENV=test nyc report",
+		"cover:local": "npm run cover:base -- --reporter=html --reporter=text",
+		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v"
 	},
 	"dependencies": {
 		"browserify-bignum": "1.3.0-2",
+		"js-nacl": "LiskHQ/js-nacl#6dc1417",
 		"lisk-constants": "1.0.0",
 		"lisk-cryptography": "1.0.0"
 	},
 	"devDependencies": {
+		"babel-plugin-istanbul": "4.1.6",
+		"babel-plugin-transform-runtime": "6.23.0",
+		"babel-preset-env": "1.6.1",
+		"babel-register": "6.26.0",
+		"chai": "4.1.2",
 		"eslint": "4.19.1",
 		"eslint-config-airbnb-base": "12.1.0",
 		"eslint-config-lisk-base": "1.0.0",
 		"eslint-plugin-import": "2.11.0",
 		"eslint-plugin-mocha": "5.0.0",
-		"prettier": "1.12.1"
+		"mocha": "5.1.1",
+		"nyc": "11.7.1",
+		"prettier": "1.12.1",
+		"sinon": "4.1.2",
+		"sinon-chai": "2.14.0"
 	}
 }
