--- a/packages/lisk-api-client/package.json
+++ b/packages/lisk-api-client/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "lisk-api-client",
 	"version": "1.0.0",
-	"description":
-		"An API client for the Lisk network",
+	"description": "An API client for the Lisk network",
 	"author":
 		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "GPL-3.0",
@@ -19,5 +18,11 @@
 	"engines": {
 		"node": "6.14.1",
 		"npm": "3.10.10"
+	},
+	"scripts": {
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\""
+	},
+	"devDependencies": {
+		"prettier": "1.12.1"
 	}
 }
