--- a/packages/lisk-api-client/package.json
+++ b/packages/lisk-api-client/package.json
@@ -19,6 +19,7 @@
 		"node": "6.14.1",
 		"npm": "3.10.10"
 	},
+	"main": "dist/index.js",
 	"scripts": {
 		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
 		"lint": "eslint .",
@@ -30,14 +31,18 @@
 			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
 		"cover:local": "npm run cover:base -- --reporter=html --reporter=text",
-		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v"
+		"cover:ci": "npm run cover:base -- --reporter=text-lcov | coveralls -v",
+		"prebuild": "rm -r dist || mkdir dist | echo",
+		"build": "babel src -d dist",
+		"build:check": "node -e \"require('./dist')\""
 	},
 	"dependencies": {
 		"lisk-constants": "1.0.0",
 		"popsicle": "=9.1.0"
 	},
 	"devDependencies": {
-	"babel-plugin-istanbul": "4.1.6",
+		"babel-cli": "6.26.0",
+		"babel-plugin-istanbul": "4.1.6",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "1.6.1",
 		"babel-register": "6.26.0",
