--- a/packages/lisk-passphrase/.babelrc
+++ b/packages/lisk-passphrase/.babelrc
@@ -1,11 +1,1 @@
-{
-	"presets": ["env"],
-	"plugins": [
-		"transform-runtime"
-	],
-	"env": {
-		"test": {
-			"plugins": ["istanbul"]
-		}
-	}
-}
+../../.babelrc.tmpl
