--- a/packages/lisk-constants/.eslintrc.json
+++ b/packages/lisk-constants/.eslintrc.json
@@ -1,14 +1,3 @@
 {
-	"extends": ["lisk-base"],
-	"plugins": ["mocha"],
-	"rules": {
-		"import/no-extraneous-dependencies": [
-			"error",
-			{
-				"devDependencies": ["test/**"],
-				"optionalDependencies": false,
-				"packageDir": "./"
-			}
-		]
-	}
+	"extends": ["../../.eslintrc.json"]
 }
