--- a/packages/lisk-cryptography/.eslintrc.json
+++ b/packages/lisk-cryptography/.eslintrc.json
@@ -1,14 +1,6 @@
 {
-	"extends": ["lisk-base"],
-	"plugins": ["mocha"],
-	"rules": {
-		"import/no-extraneous-dependencies": [
-			"error",
-			{
-				"devDependencies": ["test/**"],
-				"optionalDependencies": false,
-				"packageDir": "./"
-			}
-		]
+	"extends": ["../../.eslintrc.json"],
+	"globals": {
+		"naclInstance": true
 	}
 }
