--- a/packages/lisk-elements/package.json
+++ b/packages/lisk-elements/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "lisk-elements",
 	"version": "0.5.1",
-	"description": "A default set of elements for use by clients of the Lisk network",
+	"description":
+		"A default set of elements for use by clients of the Lisk network",
 	"author":
 		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "GPL-3.0",
@@ -18,5 +19,11 @@
 	"engines": {
 		"node": "6.14.1",
 		"npm": "3.10.10"
+	},
+	"scripts": {
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\""
+	},
+	"devDependencies": {
+		"prettier": "1.12.1"
 	}
 }
