--- a/packages/lisk-elements/package.json
+++ b/packages/lisk-elements/package.json
@@ -21,9 +21,23 @@
 		"npm": "3.10.10"
 	},
 	"scripts": {
-		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\""
+		"format": "prettier --write \"*.{js,json}\" \"{src,test}/**/*.{js,json}\"",
+		"lint": "eslint .",
+		"lint:fix": "npm run lint -- --fix"
+	},
+	"dependencies": {
+		"lisk-api-client": "0.5.1",
+		"lisk-constants": "0.5.1",
+		"lisk-cryptography": "0.5.1",
+		"lisk-passphrase": "0.5.1",
+		"lisk-transactions": "0.5.1"
 	},
 	"devDependencies": {
+		"eslint": "4.19.1",
+		"eslint-config-airbnb-base": "12.1.0",
+		"eslint-config-lisk-base": "1.0.0",
+		"eslint-plugin-import": "2.11.0",
+		"eslint-plugin-mocha": "5.0.0",
 		"prettier": "1.12.1"
 	}
 }
