:white_check_mark: Add tests for get node status command

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
 	"name": "lisk-commander",
 	"version": "1.0.0-beta.3",
 	"description": "A command line interface for Lisk",
-	"author":
-		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
+	"author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "GPL-3.0",
-	"keywords": ["lisk", "blockchain", "command-line", "nodejs", "javascript"],
+	"keywords": [
+		"lisk",
+		"blockchain",
+		"command-line",
+		"nodejs",
+		"javascript"
+	],
 	"homepage": "https://github.com/LiskHQ/lisk-commander#readme",
 	"repository": {
 		"type": "git",
@@ -23,32 +28,24 @@
 	},
 	"scripts": {
 		"start": "babel-node src/index.js",
-		"format":
-			"prettier --write \"./*.{js,json,md}\" \"{docs,src,test}{,/**}/*.{js,json,md}\"",
+		"format": "prettier --write \"./*.{js,json,md}\" \"{docs,src,test}{,/**}/*.{js,json,md}\"",
 		"lint": "eslint .",
 		"lint:fix": "npm run lint -- --fix",
-		"test":
-			"if [ -z $JENKINS_HOME ]; then npm run test:local; else npm run test:ci; fi",
+		"test": "if [ -z $JENKINS_HOME ]; then npm run test:local; else npm run test:ci; fi",
 		"test:local": "NODE_ENV=test nyc mocha test/specs",
-		"test:ci":
-			"NODE_ENV=test nyc --exclude \"**/node_modules/** coverage/**\" mocha test/specs",
+		"test:ci": "NODE_ENV=test nyc --exclude \"**/node_modules/** coverage/**\" mocha test/specs",
 		"test:watch": "npm run test:local -- --watch",
 		"test:watch:min": "npm run test:watch -- --reporter=min",
-		"cover":
-			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
+		"cover": "if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
-		"cover:local":
-			"npm run cover:base -- --reporter=html --reporter=text mocha",
-		"cover:ci":
-			"npm run cover:base -- --reporter=text-lcov mocha | coveralls -v",
-		"cover:test":
-			"NODE_ENV=test nyc  --include \"test/**\" --exclude \"**/node_modules/** coverage/**\" mocha test/specs",
+		"cover:local": "npm run cover:base -- --reporter=html --reporter=text mocha",
+		"cover:ci": "npm run cover:base -- --reporter=text-lcov mocha | coveralls -v",
+		"cover:test": "NODE_ENV=test nyc  --include \"test/**\" --exclude \"**/node_modules/** coverage/**\" mocha test/specs",
 		"prebuild": "if test -d dist; then rm -r dist; fi",
 		"build": "babel src -d dist",
 		"precommit": "lint-staged && npm run lint",
 		"prepush": "npm run lint && npm test",
-		"prepublishOnly":
-			"rm -r ./node_modules && npm install && npm run prepush && npm run build"
+		"prepublishOnly": "rm -r ./node_modules && npm install && npm run prepush && npm run build"
 	},
 	"dependencies": {
 		"babel-polyfill": "=6.26.0",
