Update lisk-elements depdendency as runtime dep

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"ip": "=1.1.5",
 		"js-yaml": "=3.10.0",
 		"json-refs": "=3.0.3",
+		"lisk-elements": "=1.0.0-beta.4",
 		"lodash": "=4.17.4",
 		"method-override": "=2.3.10",
 		"pg-monitor": "=0.9.0",
@@ -107,7 +108,6 @@
 		"jsdoc": "=3.4.3",
 		"jsdox": "=0.4.10",
 		"lint-staged": "=6.1.0",
-		"lisk-elements": "1.0.0-beta.4",
 		"mocha": "=4.0.1",
 		"moment": "=2.19.3",
 		"node-mocks-http": "^1.6.6",
