:seedling: Add oclif setup

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
-	"presets": ["env"],
+	"presets": [
+    ["env", {
+      "targets": {
+        "node": "8"
+      }
+    }]
+  ],
+	"plugins": ["transform-object-rest-spread"],
 	"env": {
 		"test": {
 			"plugins": ["istanbul"]
