Set foring.force to true for local development environment

--- a/config/devnet/config.json
+++ b/config/devnet/config.json
@@ -77,7 +77,7 @@
 		"maxTransactionsPerQueue": 1000
 	},
 	"forging": {
-		"force": false,
+		"force": true,
 		"defaultPassword": "elephant tree paris dragon chair galaxy",
 		"delegates": [
 			{
