Update helpers/config to load and merge configuraiton files

--- a/config/default/config.json
+++ b/config/default/config.json
@@ -55,7 +55,8 @@
 		},
 		"options": {
 			"timeout": 5000,
-			"broadhashConsensusCalculationInterval": 5000
+			"broadhashConsensusCalculationInterval": 5000,
+			"wsEngine": "sc-uws"
 		}
 	},
 	"broadcasts": {
