--- a/packages/lisk-transactions/package.json
+++ b/packages/lisk-transactions/package.json
@@ -36,7 +36,8 @@
 		"prebuild": "rm -r dist || mkdir dist | echo",
 		"build": "babel src -d dist",
 		"build:check": "node -e \"require('./dist')\"",
-		"prepublishOnly": "rm -r ./node_modules && npm install && npm run lint && npm test && npm run build && npm run build:check"
+		"prepublishOnly":
+			"rm -r ./node_modules && npm install && npm run lint && npm test && npm run build && npm run build:check"
 	},
 	"dependencies": {
 		"browserify-bignum": "1.3.0-2",
